--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
    </section>
    <!-- caruosel section end -->
 
-
+   <!-- details section start -->
    <div class="details text-center mt-5 my-5 mx-5">
     <h1>Discover Our Popular <br>
       Courses</h1>
       <p>It is a long established fact that a reader will be distracted by the readable <br> 
         content of a page when looking at its layout</p>
    </div>
-
+   <!-- details section start --> 
 
    <!-- course details start -->
    <section>
@@ -224,6 +224,9 @@
     <button class="btn btn-primary" type="button">ALL CURSES</button>
   </div>
    <!-- course details end -->
+
+
+   <!-- working section start -->
    <section class="working">
       <div class="container">
         <div class="card mb-5 mt-5">
@@ -247,6 +250,7 @@
                     <div class="col">
                       <h1>3.2K+</h1>
                       <h6>Online Course</h6>
+                      <div class="btn btn-primary">Get Started</div>
                     </div>
                     <div class="col">
                       <h1>600+</h1>
@@ -263,6 +267,50 @@
         </div>
       </div>
    </section>
+   <!-- working section start -->
+
+   <!-- modal section start-->
+<div class="container bg-info  border rounded-3 sm-12">
+     <div class="row">
+      <div class="col-9 px-5 py-5 text-light">
+        <h1>Ready to join?</h1>
+        <p>It is a long established fact that a reader will be distracted by the 
+          readable content of a page when looking at its layout</p>
+      </div>
+      <div div class="d-flex col-3 justify-content-center align-items-center ">
+        <button type="button" class="btn btn-light fw-5" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">Register Now</button>
+
+          <div class="modal fade" id="exampleModal" tabindex="-1"             aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+            <form>
+                <div class="mb-3">
+           <label for="recipient-name" class="col-form-label">Recipient:</label>
+           <input type="text" class="form-control" id="recipient-name">
+                </div>
+                <div class="mb-3">
+               <label for="message-text" class="col-form-label">Message:</label>
+               <textarea class="form-control" id="message-text"></textarea>
+           </div>
+             </form>
+             </div>
+               <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                   <button type="button" class="btn btn-primary">Send message</button>
+                </div>
+                </div>
+            </div>
+            </div>
+      </div>
+     </div>
+</div>
+
+   <!-- modal section end-->
 
        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
