--- a/index.html
+++ b/index.html
@@ -309,8 +309,101 @@
       </div>
      </div>
 </div>
-
    <!-- modal section end-->
+
+   <!-- Accodian section start-->
+  <section>
+    <div class="details text-center">
+      <h1>Frequently Asked Questions</h1>
+      <p>It is a long established fact that a reader will be distracted by the readable <br> 
+        content of a page when looking at its layout</p>
+    </div>
+    <div class="container my-5 mx-5  justify-content-center">
+      <div class="accordion" id="accordionPanelsStayOpenExample">
+        <div class="accordion-item 1">
+          <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+            <h5 class="q-1"> What are the Difference between Grid and Flexbox?</h5>
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+            <div class="accordion-body">
+              <p><strong>One Vs Two Dimension:</strong>
+               <h6> 
+                <ul class="acd-1">
+                <li>Grid is made for two-dimensional layout while Flexbox is for one. This means Flexbox can work on either row or columns at a time, but Grids can work on both.</li>
+                <li>GRID gives you more flexibility to move around the blocks irrespective of your HTML markup.</li>
+                <li>Flexbox, gives you more flexibility while working on either element (row or column). HTML markup and CSS will be easy to manage in this type of scenario.</li>
+                <li>The Flexbox layout is best suited to application components and small-scale layouts, while the Grid layout is designed for larger-scale layouts that are not linear in design.</li>
+              </ul>
+            </h6>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item 2">
+          <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+              <h5>what is css box model ?</h5>
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+            <div class="accordion-body">
+              <strong>The CSS Box Model.</strong> 
+              <h6>In CSS, the term "box model" is used when talking about design and layout. The CSS box model is essentially a box that wraps around every HTML element. It consists of: margins, borders, padding, and the actual content.</h6>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+             <h5> What are the semantic tag ?</h5>
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+            <div class="accordion-body">
+              <strong>This is the third item's accordion body.</strong> 
+              <h6>A semantic element clearly describes its meaning to both the browser and the developer. Examples of non-semantic elements: <strong>(div)</strong> and <strong>span</strong> - Tells nothing about its content. Examples of semantic elements: <strong>form , table , and article</strong> - Clearly defines its content.</h6>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+             <h5> What is the difference between tailwind and bootstrap ?</h5>
+            </button>
+          </h2>
+          <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+            <div class="accordion-body">
+              <div class="accordion-body">
+                <strong>Tailwind.</strong> 
+                <h6> 
+                  <ul>
+                  <li>Tailwind CSS uses a set of utility classes to create a neat UI with more flexibility and uniqueness.</li>
+                  <li>Tailwind offers predesigned widgets to build a site from scratch with fast UI development.</li>
+                  <li>Websites created using Tailwind CSS are much more customizable.</li>
+                  </ul>
+                </h6>
+                <strong> Bootstrap.</strong> 
+                <h6> 
+                  <ul>
+                  <li>Bootstrap comes with a set of pre-styled responsive, mobile-first components that possess a definite UI kit.</li>
+                  <li>Sites created using Bootstrap follow the generic pattern that makes them look identical.</li>
+                  <li>Websites created with Bootstraps are known for their responsiveness and flawless design, but the looks are generic and similar.</li>
+                  </ul>
+                </h6>
+              </
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+   <!-- Accodian section end-->
+
+
+
+
 
        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
