--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <!-- navigation section start -->
-     <section class="navigation">
+     <section class="navigation w-100%">
         <nav class="navbar navbar-expand-lg fixd-top bg-light">
             <div class="container">
               <a class="fw-bold text-secondary fs-2 navbar-brand inline-block" href="#">Pro Edu</a>
@@ -52,7 +52,7 @@
       <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./images/cover/cover-1.png" class="img-fluid mx-auto" alt="...">
+            <img src="./images/cover/cover-1.png" class="img-fluid mx-auto w-175" alt="...">
             <div class="carousel-caption d-auto d-md-block">
               <h1>Get Started Digital <br>
                 Learning</h1>
@@ -63,7 +63,7 @@
            
           </div>
           <div class="carousel-item">
-            <img src="./images/cover/cover-2.jpg" class="d-block w-100" alt="...">
+            <img src="./images/cover/cover-2.jpg" class="img-fluid mx-auto w-175" alt="...">
             <div class="carousel-caption d-auto  d-md-block">
               <h5>Second slide label</h5>
               <p>Some representative placeholder content for the second slide.</p>
@@ -71,7 +71,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+            <img src="./images/cover/cover-3.jpg" class="img-fluid mx-auto w-100% " alt="...">
             <div class="carousel-caption d-auto  d-md-block">
               <h5>Third slide label</h5>
               <p>Some representative placeholder content for the third slide.</p>
@@ -106,16 +106,17 @@
     <div class="container">
       <div class="row ">
         <div class="col-6">   
-          <div class="card mb-3" style="max-width: 540px;">
+          <div class="card mb-3 " style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-md-4">
-              <img src="./images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+              <img src="./images/course/course-1.png" class="img-fluid  w-100 rounded-start" alt="...">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <h5 class="card-title text-dark">Fundamental Of UI/UX Design</h5>
+                <p class="card-text">Some quick example text to build on the card title 
+                  and make up the bulk of the card.</p>
+                <h5 class="text-info">Price : 20$</h5>
               </div>
             </div>
           </div>
@@ -127,23 +128,25 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <h5 class="card-title">Javascript Basic to advanced</h5>
+                <p class="card-text">Some quick example text to build on the card title 
+                  and make up the bulk of the card.</p>
+                <h5 class="text-info">Price : 20$</h5>
               </div>
             </div>
           </div>
         </div>
-        <div class="card mb-3" style="max-width: 540px;">
+        <div class="card mb-3 col-sm-12 col-12" style="">
           <div class="row g-0">
             <div class="col-md-4">
               <img src="./images/course/course-3.png" class="img-fluid rounded-start" alt="...">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <h5 class="card-title">Fullstack Web Development</h5>
+                <p class="card-text">Some quick example text to build on the card title 
+                  and make up the bulk of the card.</p>
+                <h5 class="text-info">Price : 20$</h5>
               </div>
             </div>
           </div>
@@ -156,8 +159,9 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <p class="card-text">Some quick example text to build on the card title 
+                  and make up the bulk of the card.</p>
+                <h5 class="text-info">Price : 20$</h5>
               </div>
             </div>
           </div>
@@ -170,8 +174,9 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <p class="card-text">Some quick example text to build on the card title 
+                  and make up the bulk of the card.</p>
+                <h5 class="text-info">Price : 20$</h5>
               </div>
             </div>
           </div>
@@ -184,8 +189,9 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <p class="card-text">Some quick example text to build on the card title 
+                  and make up the bulk of the card.</p>
+                <h5 class="text-info">Price : 20$</h5>
               </div>
             </div>
           </div>
@@ -377,9 +383,9 @@
 
 
   <!-- Our clients srart -->
-  <div class="container">
+  <div class="container d-none d-md-block d-lg-block">
     <h1 class="text-center pb-5 pt-5">Trusted by over 800+ companies</h1>
-    <div class="d-flex flex-row justify-content-between pt-5 pb-5 ">
+    <div class="d-flex flex-row justify-content-between pt-5 pb-5  ">
       <div class="p-2"><img src="./images/company/company-1.png" alt="" ></div>
       <div class="p-2"><img src="./images/company/company-2.png" alt=""></div>
       <div class="p-2"><img src="./images/company/company-3.png" alt=""></div>
