css addig start

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
    <!-- caruosel section end -->
 
    <!-- details section start -->
-   <div class="details text-center mt-5 my-5 mx-5">
+   <div class="details">
     <h1>Discover Our Popular <br>
       Courses</h1>
       <p>It is a long established fact that a reader will be distracted by the readable <br> 
@@ -158,7 +158,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Digital Marketing</h5>
                 <p class="card-text">Some quick example text to build on the card title 
                   and make up the bulk of the card.</p>
                 <h5 class="text-info">Price : 20$</h5>
@@ -173,7 +173,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Photography Basic Rules</h5>
                 <p class="card-text">Some quick example text to build on the card title 
                   and make up the bulk of the card.</p>
                 <h5 class="text-info">Price : 20$</h5>
@@ -188,7 +188,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Motion Graphics</h5>
                 <p class="card-text">Some quick example text to build on the card title 
                   and make up the bulk of the card.</p>
                 <h5 class="text-info">Price : 20$</h5>
@@ -201,7 +201,7 @@
     </div>
    </section>
    <div class="d-grid  col-2 mt-5 mb-5 mx-auto">
-    <button class="btn btn-primary" type="button">ALL CURSES</button>
+    <button class="btn " type="button">ALL CURSES</button>
   </div>
    <!-- course details end -->
 
