--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
    <section>
     <div class="container">
       <div class="row ">
-        <div class="col-6 col-lg-6 col-md-6 col-sm-12">   
+        <div class="col-6">   
           <div class="card mb-3 " style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-md-4">
@@ -249,7 +249,7 @@
    <!-- working section start -->
 
    <!-- modal section start-->
-<div class="container bg-info  border rounded-3 sm-12">
+<div class="container">
      <div id="mdl" class="row">
       <div class="col-9 px-5 py-5 text-light">
         <h1>Ready to join?</h1>
@@ -406,15 +406,15 @@
 
     <div class="Social-link">
       <li class="social-item"><a href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook"></i></a></li>
-      <li class="social-item"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-      <li class="social-item"><a href="#"><i class="fa-brands fa-instagram-square"></i></a></li>
+      <li class="social-item"><a href="https://twitter.com/?lang=en"><i class="fa-brands fa-twitter"></i></a></li>
+      <li class="social-item"><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram-square"></i></a></li>
       <li class="social-item"><a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a></li>
   </div>
  </div>     
 
 </footer>
 
- <!-- footer section start -->
+ <!-- footer section end -->
 
 
 
